# HelloWorld

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: CI.yml
CMake/: CTestTestfile.cmake.in  FvlHelpers.cmake  config.cmake.in
Core/: CMakeLists.txt
Core/API/Core/: Macros.h
GitHub/: install-ubuntu.sh  install-windows.bat
HelloWorld/: CMakeLists.txt  Main.cpp
LibA/: CMakeLists.txt  LibA.cpp  LibA.h
LibA/API/LibA/: ILibA.h  LibAApi.h
LibB/: CMakeLists.txt  LibB.cpp  LibB.h
LibB/API/LibB/: ILibB.h  LibBApi.h
LibC/: CMakeLists.txt  LibC.cpp  LibC.h
LibC/API/LibC/: ILibC.h  LibCApi.h
Shared/: CMakeLists.txt  Shared.cpp  Shared.h
Shared/API/Shared/: IShared.h  SharedApi.h
Static/: CMakeLists.txt  Static.cpp  Static.h
Static/API/Static/: IStatic.h  StaticApi.h
UnitTest/: CMakeLists.txt  Main.cpp
